--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "start": "node ./dist/index.js",
     "lint": "npx eslint ./src || exit 0",
     "lint:fix": "npx eslint ./src --fix || exit 0",
-    "build": "tsc",
+    "build": "rimraf ./dist && tsc",
     "check": "tsc --noEmit"
   },
   "keywords": [],
@@ -19,6 +19,7 @@
     "@types/eslint__js": "^8.42.3",
     "@types/node": "^22.5.4",
     "eslint": "^9.10.0",
+    "rimraf": "^6.0.1",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0"
   }
