--- a/package.json
+++ b/package.json
@@ -6,10 +6,11 @@
   "type": "module",
   "scripts": {
     "start": "node ./dist/index.js",
+    "test": "node --experimental-vm-modules node_modules/jest/bin/jest.js",
     "lint": "npx eslint ./src || exit 0",
     "lint:fix": "npx eslint ./src --fix || exit 0",
-    "build": "rimraf ./dist && tsc",
-    "check": "tsc --noEmit"
+    "build": "rimraf ./dist && tsc --project tsconfig.build.json",
+    "check": "tsc --project tsconfig.json"
   },
   "keywords": [],
   "author": "",
@@ -18,9 +19,12 @@
     "@eslint/js": "^9.10.0",
     "@stylistic/eslint-plugin": "^2.8.0",
     "@types/eslint__js": "^8.42.3",
+    "@types/jest": "^29.5.13",
     "@types/node": "^22.5.4",
     "eslint": "^9.10.0",
+    "jest": "^29.7.0",
     "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "typescript": "^5.5.4",
     "typescript-eslint": "^8.4.0"
   }
