--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,7 +6,7 @@
 		"baseUrl": ".",
 		// "allowJs": true,
 		"outDir": "./dist",
-    // "noEmit": true,
+    "noEmit": true,
 		"esModuleInterop": true,
 		"forceConsistentCasingInFileNames": true,
 		"strict": true,
